doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/Users/James/Desktop/BlueJ 3.1.1/BlueJ.app/Contents/Frameworks/jdk.framework/Versions/A/Contents/Home/bin/javadoc
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.7
-classpath
/Users/James/Desktop/BlueJ 3.1.1/BlueJ.app/Contents/Resources/Java/bluejcore.jar:/Users/James/Desktop/BlueJ 3.1.1/BlueJ.app/Contents/Resources/Java/junit-4.8.2.jar:/Users/James/Desktop/ecosystem
-d
/Users/James/Desktop/ecosystem/doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
/Users/James/Desktop/BlueJ 3.1.1/BlueJ.app/Contents/Resources/Java/bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
/Users/James/Desktop/ecosystem/Zone.java
<---- end of javadoc command ---->
Loading source file /Users/James/Desktop/ecosystem/Zone.java...
Constructing Javadoc information...
/Users/James/Desktop/ecosystem/Zone.java:18: error: cannot find symbol
    private ArrayList<Organism> organisms;
            ^
  symbol:   class ArrayList
  location: class Zone
/Users/James/Desktop/ecosystem/Zone.java:18: error: cannot find symbol
    private ArrayList<Organism> organisms;
                      ^
  symbol:   class Organism
  location: class Zone
/Users/James/Desktop/ecosystem/Zone.java:77: error: cannot find symbol
    public boolean addOrgansim(Organism organism)
                               ^
  symbol:   class Organism
  location: class Zone
/Users/James/Desktop/ecosystem/Zone.java:86: error: cannot find symbol
    public void removeOrganism(Organism organism)
                               ^
  symbol:   class Organism
  location: class Zone
Standard Doclet version 1.7.0_45
Building tree for all the packages and classes...
Generating /Users/James/Desktop/ecosystem/doc/Zone.html...
/Users/James/Desktop/ecosystem/Zone.java:30: warning - @param argument "an" is not a parameter name.
/Users/James/Desktop/ecosystem/Zone.java:77: warning - @param argument "An" is not a parameter name.
/Users/James/Desktop/ecosystem/Zone.java:86: warning - @param argument "an" is not a parameter name.
/Users/James/Desktop/ecosystem/Zone.java:40: warning - @param argument "-" is not a parameter name.
Generating /Users/James/Desktop/ecosystem/doc/package-frame.html...
Generating /Users/James/Desktop/ecosystem/doc/package-summary.html...
Generating /Users/James/Desktop/ecosystem/doc/constant-values.html...
Building index for all the packages and classes...
Building index for all classes...
Generating /Users/James/Desktop/ecosystem/doc/allclasses-frame.html...
Generating /Users/James/Desktop/ecosystem/doc/allclasses-noframe.html...
Generating /Users/James/Desktop/ecosystem/doc/index.html...
Generating /Users/James/Desktop/ecosystem/doc/stylesheet.css...
8 warnings
